...
        20;
  }

  @override
  Widget build(BuildContext context) {
    return InkWell(
      key: const ValueKey("score_app_bar"),
      onTap: () => {
        setState(() {
          isExpanded = !isExpanded;
          containerHeight = isExpanded ? maxHeight : height;
        }),
      },
...
              Builder(
                builder: (context) {
                  if (isExpanded == false) {
                    final Player firstLeaderPlayer = widget.leadPlayers[0];

                    return Row(
                      key: const ValueKey("scoreboard_unexpanded"),
                      mainAxisAlignment: MainAxisAlignment.center,
                      children: [
                        SKPlayerTitle(
                          key: const ValueKey("lead_player"),
                          playerName: firstLeaderPlayer.name,
                          isLeader: true,
...
