...
                      opacity: AlwaysStoppedAnimation<double>(0.5),
                      image: AssetImage('assets/images/logo.png'))),
              Container(
                alignment: Alignment.topCenter,
                child: const Padding(
                  padding: EdgeInsets.only(top: 100),
                  child: Text('Skull King',
                      style: TextStyle(
                          fontFamily: 'Allura',
                          fontSize: 82,
                          color: Colors.white)),
                ),
              ),
...
