...
class HelpModalView extends StatelessWidget {
  const HelpModalView({super.key});

  @override
  Widget build(BuildContext context) {
    return FractionallySizedBox(
      key: const ValueKey("drawer_help_modal"),
      heightFactor: .8,
      child: Padding(
        padding: const EdgeInsets.all(20),
        child: ListView.builder(
          shrinkWrap: true,
          itemCount: 1,
...
                Stack(
                  alignment: Alignment.center,
                  children: [
                    Container(
                      alignment: Alignment.topLeft,
                      child: IconButton(
                        key: const ValueKey("drawer_help_modal_back_btn"),
                        color: lightColor,
                        icon: const Icon(Icons.arrow_back),
                        onPressed: () => Navigator.pop(context),
                      ),
                    ),
                    SKText(
...
