...
          color: Colors.transparent,
          child: BlocBuilder<LanguageCubit, LanguageState>(
            builder: (context, state) {
              const iconSize = 24.0;

              return DropdownButtonFormField(
                key: const ValueKey("language_dropdown"),
                dropdownColor: secondaryColor,
                elevation: 0,
                iconSize: 0.0,
                decoration: const InputDecoration(
                    enabledBorder: InputBorder.none, border: InputBorder.none),
                selectedItemBuilder: (context) {
...
